[gd_scene load_steps=3 format=3 uid="uid://t3murfg5nmty"]

[ext_resource type="Script" path="res://src/player/ability/aura/aura.gd" id="1_k6jv6"]

[sub_resource type="CircleShape2D" id="CircleShape2D_p2ixa"]
resource_local_to_scene = true
radius = 32.0

[node name="Aura" type="Node2D"]
z_index = 1
script = ExtResource("1_k6jv6")

[node name="Area2D" type="Area2D" parent="." groups=["aura_areas"]]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
unique_name_in_owner = true
shape = SubResource("CircleShape2D_p2ixa")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
